Fix error prone warning for dexmaker-tests and dexmaker-mockito-tests
- Also revert to com.android.support.test:runner:0.5 as more modern
  versions required minSDK 9